aws/aws-parsec/security.tf
resource "aws_security_group" "allow_ssh_rdp" {
  name        = "allow_ssh_rdp-${var.namespace}"
  description = "Allow SSH and RDP inbound traffic"
  vpc_id      = aws_vpc.opencloudplay.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "RDP"
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
